wxc/include/ewxw/wxc_glue.h



/* wxAutomationObject */
TClassDefExtend(wxAutomationObject,wxObject)

/* wxBitmap */
TClassDefExtend(wxBitmap,wxGDIObject)
void       wxBitmap_AddHandler( TClass(wxEvtHandler) handler );

void       wxBitmap_CleanUpHandlers(  );

TClass(wxBitmap) wxBitmap_Create( void* _data, int _type, TSize(_width,_height), int _depth );

TClass(wxBitmap) wxBitmap_CreateDefault(  );

TClass(wxBitmap) wxBitmap_CreateEmpty( TSize(_width,_height), int _depth );

TClass(wxBitmap) wxBitmap_CreateFromXPM( TSelf(wxBitmap) data );

TClass(wxBitmap) wxBitmap_CreateLoad( TStringVoid name, int type );

void       wxBitmap_Delete( TSelf(wxBitmap) _obj );

void*      wxBitmap_FindHandlerByExtension( TSelf(wxBitmap) extension, int type );

void*      wxBitmap_FindHandlerByName( TStringVoid name );

void*      wxBitmap_FindHandlerByType( int type );

int        wxBitmap_GetDepth( TSelf(wxBitmap) _obj );

int        wxBitmap_GetHeight( TSelf(wxBitmap) _obj );

TClass(wxMask) wxBitmap_GetMask( TSelf(wxBitmap) _obj );

void       wxBitmap_GetSubBitmap( TSelf(wxBitmap) _obj, TRect(x,y,w,h), TClassRef(wxBitmap) _ref );

int        wxBitmap_GetWidth( TSelf(wxBitmap) _obj );

void       wxBitmap_InitStandardHandlers(  );

void       wxBitmap_InsertHandler( TClass(wxEvtHandler) handler );

int        wxBitmap_LoadFile( TSelf(wxBitmap) _obj, TStringVoid name, int type );

TBool      wxBitmap_Ok( TSelf(wxBitmap) _obj );

int        wxBitmap_RemoveHandler( TStringVoid name );

int        wxBitmap_SaveFile( TSelf(wxBitmap) _obj, TStringVoid name, int type, TClass(wxPalette) cmap );

void       wxBitmap_SetDepth( TSelf(wxBitmap) _obj, int d );

void       wxBitmap_SetHeight( TSelf(wxBitmap) _obj, int h );

void       wxBitmap_SetMask( TSelf(wxBitmap) _obj, TClass(wxMask) mask );

void       wxBitmap_SetWidth( TSelf(wxBitmap) _obj, int w );


/* wxStaticBitmap */
TClassDefExtend(wxStaticBitmap,wxControl)
TClass(wxStaticBitmap) wxStaticBitmap_Create( TClass(wxWindow) _prt, int _id, TClass(wxBitmap) bitmap, TRect(_lft,_top,_wdt,_hgt), int _stl );

void       wxStaticBitmap_Delete( TSelf(wxStaticBitmap) _obj );

void       wxStaticBitmap_GetBitmap( TSelf(wxStaticBitmap) _obj, TClassRef(wxBitmap) _ref );

void       wxStaticBitmap_GetIcon( TSelf(wxStaticBitmap) _obj, TClassRef(wxIcon) _ref );

void       wxStaticBitmap_SetBitmap( TSelf(wxStaticBitmap) _obj, TClass(wxBitmap) bitmap );

void       wxStaticBitmap_SetIcon( TSelf(wxStaticBitmap) _obj, TClass(wxIcon) icon );